gccida/g0/init_optabs
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_optabs/src/optabs.c:5206:1: error: unknown type name 'optab_0'; did you mean 'optab'?
optab_0 v0; // rbx 
^~~~~~~
optab
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_optabs/src/optabs.h:48:5: note: 'optab' declared here
} * optab;
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_optabs/src/optabs.c:5207:1: error: unknown type name 'optab_0'; did you mean 'optab'?
optab_0 v1; // rbx 
^~~~~~~
optab
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_optabs/src/optabs.h:48:5: note: 'optab' declared here
} * optab;
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_optabs/src/optabs.c:5208:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v2; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_optabs/src/optabs.c:5318:41: error: use of undeclared identifier 'opname'
init_integral_libfuncs( optab_table[0], opname, 51); 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_optabs/src/optabs.c:5319:41: error: use of undeclared identifier 'opname'
init_floating_libfuncs( optab_table[0], opname, 51); 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_optabs/src/optabs.c:5320:42: error: use of undeclared identifier 'opname'; did you mean 'tzname'?
init_integral_libfuncs( optab_table[1], &opname[4], 51); 
                                         ^~~~~~
                                         tzname
/usr/include/time.h:166:14: note: 'tzname' declared here
extern char *tzname[2];
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_optabs/src/optabs.c:5321:41: error: use of undeclared identifier 'opname'
init_floating_libfuncs( optab_table[1], opname, 51); 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_optabs/src/optabs.c:5330:42: error: use of undeclared identifier 'off_7FEA13'
init_integral_libfuncs( optab_table[10], off_7FEA13, 51); 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_optabs/src/optabs.c:5331:42: error: use of undeclared identifier 'off_7FEA13'
init_floating_libfuncs( optab_table[10], off_7FEA13, 51); 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_optabs/src/optabs.c:5340:42: error: use of undeclared identifier 'off_7FEA44'
init_integral_libfuncs( optab_table[19], off_7FEA44, 51); 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_optabs/src/optabs.c:5341:42: error: use of undeclared identifier 'off_7FEA48'
init_integral_libfuncs( optab_table[20], off_7FEA48, 51); 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_optabs/src/optabs.c:5342:43: error: use of undeclared identifier 'off_7FEA48'
init_integral_libfuncs( optab_table[21], &off_7FEA48[4], 51); 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_optabs/src/optabs.c:5347:42: error: use of undeclared identifier 'off_7FEA5F'
init_integral_libfuncs( optab_table[27], off_7FEA5F, 51); 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_optabs/src/optabs.c:5348:42: error: use of undeclared identifier 'off_7FEA5F'
init_floating_libfuncs( optab_table[27], off_7FEA5F, 51); 
                                         ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_optabs/src/obj/optabs.o] Error 1
